# codingchallenges

./: LICENSE  README.md
wordcount/: .gitignore  CMakeLists.txt  compiler_flags.cmake
wordcount/src/: application.h  parseargs.cpp  parseargs.h  stdheaders.h  wordcount.cpp  wordcount.h
